--- a/express/learn_about_me/package.json
+++ b/express/learn_about_me/package.json
@@ -5,7 +5,7 @@
   "main": "app",
   "private": true,
   "scripts": {
-    "start": "node app",
+    "start": "nodemon app",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
