--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "commander": "^2.11.0",
     "express": "^4.15.4",
     "express-generator": "^4.15.0",
+    "helmet": "^3.8.1",
     "mime": "^1.3.6",
     "pretty-bytes": "^4.0.2",
     "pug": "^2.0.0-rc.3",
